--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,12 @@
--#  This file is app/views/movies/index.html.haml
+
 %h1 All Movies
 
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th{:class => @title_class}= link_to 'Movie Title', movies_path(:sort_by=>"title"), :id=>"title_header"
       %th Rating
-      %th Release Date
+      %th{:class => @release_date_class}= link_to 'Release Date', movies_path(:sort_by=>"release_date"), :id=>"release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
