--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -10,9 +10,9 @@
 %table#movies
   %thead
     %tr
-      %th{:class => @title_class}= link_to 'Movie Title', movies_path(:sort_by=>"title"), :id=>"title_header"
+      %th{:class => @title_class}= link_to 'Movie Title', movies_path(:sort_by=>"title", :ratings=>@rating_one), :id=>"title_header"
       %th Rating
-      %th{:class => @release_date_class}= link_to 'Release Date', movies_path(:sort_by=>"release_date"), :id=>"release_date_header"
+      %th{:class => @release_date_class}= link_to 'Release Date', movies_path(:sort_by=>"release_date", :ratings=>@rating_one), :id=>"release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
